# FRC-2019-Vision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FRC-2019-vision  Makefile  cmake_install.cmake  driver-vision.sh  gstreamer pipes  log.cpp  log.h  network.cpp  network.h  rc.local  run.sh  target_data.ods  vision.cpp
doc/: .~lock.target_data_long.ods#  .~lock.target_data_offset.ods#  target_data.ods  target_data_long.ods  target_data_offset.ods
static-tests/: static9
