cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
project( FRC-2019-vision )
find_package( OpenCV REQUIRED )
find_package( Threads )
#OCV_OPTION(WITH_V4L ON)
#OCV_OPTION(WITH_LIBV4L ON)
add_executable( FRC-2019-vision vision.cpp network.cpp log.cpp)
target_link_libraries( FRC-2019-vision ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} )
